--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/emotion/emotion.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/emotion/emotion.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" >
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
@@ -34,19 +34,17 @@
 <script type="text/javascript" src="emotion.js"></script>
 <script type="text/javascript">
     var emotion = {
-        tabNum:7, //切换面板数量
-        SmilmgName:{ tab0:['j_00', 84], tab1:['t_00', 40], tab2:['w_00', 52], tab3:['B_00', 63], tab4:['C_00', 20], tab5:['i_f', 50], tab6:['y_00', 40] }, //图片前缀名
-        imageFolders:{ tab0:'jx2/', tab1:'tsj/', tab2:'ldw/', tab3:'bobo/', tab4:'babycat/', tab5:'face/', tab6:'youa/'}, //图片对应文件夹路径
-        imageCss:{tab0:'jd', tab1:'tsj', tab2:'ldw', tab3:'bb', tab4:'cat', tab5:'pp', tab6:'youa'}, //图片css类名
-        imageCssOffset:{tab0:35, tab1:35, tab2:35, tab3:35, tab4:35, tab5:25, tab6:35}, //图片偏移
+        tabNum:7, //鍒囨崲闈㈡澘鏁伴噺
+        SmilmgName:{ tab0:['j_00', 84], tab1:['t_00', 40], tab2:['w_00', 52], tab3:['B_00', 63], tab4:['C_00', 20], tab5:['i_f', 50], tab6:['y_00', 40] }, //鍥剧墖鍓嶇紑鍚?        imageFolders:{ tab0:'jx2/', tab1:'tsj/', tab2:'ldw/', tab3:'bobo/', tab4:'babycat/', tab5:'face/', tab6:'youa/'}, //鍥剧墖瀵瑰簲鏂囦欢澶硅矾寰?        imageCss:{tab0:'jd', tab1:'tsj', tab2:'ldw', tab3:'bb', tab4:'cat', tab5:'pp', tab6:'youa'}, //鍥剧墖css绫诲悕
+        imageCssOffset:{tab0:35, tab1:35, tab2:35, tab3:35, tab4:35, tab5:25, tab6:35}, //鍥剧墖鍋忕Щ
         SmileyInfor:{
-            tab0:['Kiss', 'Love', 'Yeah', '啊！', '背扭', '顶', '抖胸', '88', '汗', '瞌睡', '鲁拉', '拍砖', '揉脸', '生日快乐', '大笑', '瀑布汗~', '惊讶', '臭美', '傻笑', '抛媚眼', '发怒', '打酱油', '俯卧撑', '气愤', '?', '吻', '怒', '胜利', 'HI', 'KISS', '不说', '不要', '扯花', '大心', '顶', '大惊', '飞吻', '鬼脸', '害羞', '口水', '狂哭', '来', '发财了', '吃西瓜', '套牢', '害羞', '庆祝', '我来了', '敲打', '晕了', '胜利', '臭美', '被打了', '贪吃', '迎接', '酷', '微笑', '亲吻', '调皮', '惊恐', '耍酷', '发火', '害羞', '汗水', '大哭', '', '加油', '困', '你NB', '晕倒', '开心', '偷笑', '大哭', '滴汗', '叹气', '超赞', '??', '飞吻', '天使', '撒花', '生气', '被砸', '吓傻', '随意吐'],
-            tab1:['Kiss', 'Love', 'Yeah', '啊！', '背扭', '顶', '抖胸', '88', '汗', '瞌睡', '鲁拉', '拍砖', '揉脸', '生日快乐', '摊手', '睡觉', '瘫坐', '无聊', '星星闪', '旋转', '也不行', '郁闷', '正Music', '抓墙', '撞墙至死', '歪头', '戳眼', '飘过', '互相拍砖', '砍死你', '扔桌子', '少林寺', '什么？', '转头', '我爱牛奶', '我踢', '摇晃', '晕厥', '在笼子里', '震荡'],
-            tab2:['大笑', '瀑布汗~', '惊讶', '臭美', '傻笑', '抛媚眼', '发怒', '我错了', 'money', '气愤', '挑逗', '吻', '怒', '胜利', '委屈', '受伤', '说啥呢？', '闭嘴', '不', '逗你玩儿', '飞吻', '眩晕', '魔法', '我来了', '睡了', '我打', '闭嘴', '打', '打晕了', '刷牙', '爆揍', '炸弹', '倒立', '刮胡子', '邪恶的笑', '不要不要', '爱恋中', '放大仔细看', '偷窥', '超高兴', '晕', '松口气', '我跑', '享受', '修养', '哭', '汗', '啊~', '热烈欢迎', '打酱油', '俯卧撑', '?'],
-            tab3:['HI', 'KISS', '不说', '不要', '扯花', '大心', '顶', '大惊', '飞吻', '鬼脸', '害羞', '口水', '狂哭', '来', '泪眼', '流泪', '生气', '吐舌', '喜欢', '旋转', '再见', '抓狂', '汗', '鄙视', '拜', '吐血', '嘘', '打人', '蹦跳', '变脸', '扯肉', '吃To', '吃花', '吹泡泡糖', '大变身', '飞天舞', '回眸', '可怜', '猛抽', '泡泡', '苹果', '亲', '', '骚舞', '烧香', '睡', '套娃娃', '捅捅', '舞倒', '西红柿', '爱慕', '摇', '摇摆', '杂耍', '招财', '被殴', '被球闷', '大惊', '理想', '欧打', '呕吐', '碎', '吐痰'],
-            tab4:['发财了', '吃西瓜', '套牢', '害羞', '庆祝', '我来了', '敲打', '晕了', '胜利', '臭美', '被打了', '贪吃', '迎接', '酷', '顶', '幸运', '爱心', '躲', '送花', '选择'],
-            tab5:['微笑', '亲吻', '调皮', '惊讶', '耍酷', '发火', '害羞', '汗水', '大哭', '得意', '鄙视', '困', '夸奖', '晕倒', '疑问', '媒婆', '狂吐', '青蛙', '发愁', '亲吻', '', '爱心', '心碎', '玫瑰', '礼物', '哭', '奸笑', '可爱', '得意', '呲牙', '暴汗', '楚楚可怜', '困', '哭', '生气', '惊讶', '口水', '彩虹', '夜空', '太阳', '钱钱', '灯泡', '咖啡', '蛋糕', '音乐', '爱', '胜利', '赞', '鄙视', 'OK'],
-            tab6:['男兜', '女兜', '开心', '乖乖', '偷笑', '大笑', '抽泣', '大哭', '无奈', '滴汗', '叹气', '狂晕', '委屈', '超赞', '??', '疑问', '飞吻', '天使', '撒花', '生气', '被砸', '口水', '泪奔', '吓傻', '吐舌头', '点头', '随意吐', '旋转', '困困', '鄙视', '狂顶', '篮球', '再见', '欢迎光临', '恭喜发财', '稍等', '我在线', '恕不议价', '库房有货', '货在路上']
+            tab0:['Kiss', 'Love', 'Yeah', '鍟婏紒', '鑳屾壄', '椤?, '鎶栬兏', '88', '姹?, '鐬岀潯', '椴佹媺', '鎷嶇爾', '鎻夎劯', '鐢熸棩蹇箰', '澶х瑧', '鐎戝竷姹梸', '鎯婅', '鑷編', '鍌荤瑧', '鎶涘獨鐪?, '鍙戞€?, '鎵撻叡娌?, '淇崸鎾?, '姘旀劋', '?', '鍚?, '鎬?, '鑳滃埄', 'HI', 'KISS', '涓嶈', '涓嶈', '鎵姳', '澶у績', '椤?, '澶ф儕', '椋炲惢', '楝艰劯', '瀹崇緸', '鍙ｆ按', '鐙傚摥', '鏉?, '鍙戣储浜?, '鍚冭タ鐡?, '濂楃墷', '瀹崇緸', '搴嗙', '鎴戞潵浜?, '鏁叉墦', '鏅曚簡', '鑳滃埄', '鑷編', '琚墦浜?, '璐悆', '杩庢帴', '閰?, '寰瑧', '浜插惢', '璋冪毊', '鎯婃亹', '鑰嶉叿', '鍙戠伀', '瀹崇緸', '姹楁按', '澶у摥', '', '鍔犳补', '鍥?, '浣燦B', '鏅曞€?, '寮€蹇?, '鍋风瑧', '澶у摥', '婊存睏', '鍙规皵', '瓒呰禐', '??', '椋炲惢', '澶╀娇', '鎾掕姳', '鐢熸皵', '琚牳', '鍚撳偦', '闅忔剰鍚?],
+            tab1:['Kiss', 'Love', 'Yeah', '鍟婏紒', '鑳屾壄', '椤?, '鎶栬兏', '88', '姹?, '鐬岀潯', '椴佹媺', '鎷嶇爾', '鎻夎劯', '鐢熸棩蹇箰', '鎽婃墜', '鐫¤', '鐦潗', '鏃犺亰', '鏄熸槦闂?, '鏃嬭浆', '涔熶笉琛?, '閮侀椃', '姝usic', '鎶撳', '鎾炲鑷虫', '姝ご', '鎴崇溂', '椋樿繃', '浜掔浉鎷嶇爾', '鐮嶆浣?, '鎵旀瀛?, '灏戞灄瀵?, '浠€涔堬紵', '杞ご', '鎴戠埍鐗涘ザ', '鎴戣涪', '鎽囨檭', '鏅曞帴', '鍦ㄧ瀛愰噷', '闇囪崱'],
+            tab2:['澶х瑧', '鐎戝竷姹梸', '鎯婅', '鑷編', '鍌荤瑧', '鎶涘獨鐪?, '鍙戞€?, '鎴戦敊浜?, 'money', '姘旀劋', '鎸戦€?, '鍚?, '鎬?, '鑳滃埄', '濮斿眻', '鍙椾激', '璇村暐鍛紵', '闂槾', '涓?, '閫椾綘鐜╁効', '椋炲惢', '鐪╂檿', '榄旀硶', '鎴戞潵浜?, '鐫′簡', '鎴戞墦', '闂槾', '鎵?, '鎵撴檿浜?, '鍒风墮', '鐖嗘弽', '鐐稿脊', '鍊掔珛', '鍒儭瀛?, '閭伓鐨勭瑧', '涓嶈涓嶈', '鐖辨亱涓?, '鏀惧ぇ浠旂粏鐪?, '鍋风', '瓒呴珮鍏?, '鏅?, '鏉惧彛姘?, '鎴戣窇', '浜彈', '淇吇', '鍝?, '姹?, '鍟妦', '鐑儓娆㈣繋', '鎵撻叡娌?, '淇崸鎾?, '?'],
+            tab3:['HI', 'KISS', '涓嶈', '涓嶈', '鎵姳', '澶у績', '椤?, '澶ф儕', '椋炲惢', '楝艰劯', '瀹崇緸', '鍙ｆ按', '鐙傚摥', '鏉?, '娉溂', '娴佹唱', '鐢熸皵', '鍚愯垖', '鍠滄', '鏃嬭浆', '鍐嶈', '鎶撶媯', '姹?, '閯欒', '鎷?, '鍚愯', '鍢?, '鎵撲汉', '韫﹁烦', '鍙樿劯', '鎵倝', '鍚僒o', '鍚冭姳', '鍚规场娉＄硸', '澶у彉韬?, '椋炲ぉ鑸?, '鍥炵湼', '鍙€?, '鐚涙娊', '娉℃场', '鑻规灉', '浜?, '', '楠氳垶', '鐑ч', '鐫?, '濂楀▋濞?, '鎹呮崊', '鑸炲€?, '瑗跨孩鏌?, '鐖辨厱', '鎽?, '鎽囨憜', '鏉傝€?, '鎷涜储', '琚', '琚悆闂?, '澶ф儕', '鐞嗘兂', '娆ф墦', '鍛曞悙', '纰?, '鍚愮棸'],
+            tab4:['鍙戣储浜?, '鍚冭タ鐡?, '濂楃墷', '瀹崇緸', '搴嗙', '鎴戞潵浜?, '鏁叉墦', '鏅曚簡', '鑳滃埄', '鑷編', '琚墦浜?, '璐悆', '杩庢帴', '閰?, '椤?, '骞歌繍', '鐖卞績', '韬?, '閫佽姳', '閫夋嫨'],
+            tab5:['寰瑧', '浜插惢', '璋冪毊', '鎯婅', '鑰嶉叿', '鍙戠伀', '瀹崇緸', '姹楁按', '澶у摥', '寰楁剰', '閯欒', '鍥?, '澶稿', '鏅曞€?, '鐤戦棶', '濯掑﹩', '鐙傚悙', '闈掕洐', '鍙戞剚', '浜插惢', '', '鐖卞績', '蹇冪', '鐜懓', '绀肩墿', '鍝?, '濂哥瑧', '鍙埍', '寰楁剰', '鍛茬墮', '鏆存睏', '妤氭鍙€?, '鍥?, '鍝?, '鐢熸皵', '鎯婅', '鍙ｆ按', '褰╄櫣', '澶滅┖', '澶槼', '閽遍挶', '鐏场', '鍜栧暋', '铔嬬硶', '闊充箰', '鐖?, '鑳滃埄', '璧?, '閯欒', 'OK'],
+            tab6:['鐢峰厹', '濂冲厹', '寮€蹇?, '涔栦箹', '鍋风瑧', '澶х瑧', '鎶芥常', '澶у摥', '鏃犲', '婊存睏', '鍙规皵', '鐙傛檿', '濮斿眻', '瓒呰禐', '??', '鐤戦棶', '椋炲惢', '澶╀娇', '鎾掕姳', '鐢熸皵', '琚牳', '鍙ｆ按', '娉', '鍚撳偦', '鍚愯垖澶?, '鐐瑰ご', '闅忔剰鍚?, '鏃嬭浆', '鍥板洶', '閯欒', '鐙傞《', '绡悆', '鍐嶈', '娆㈣繋鍏変复', '鎭枩鍙戣储', '绋嶇瓑', '鎴戝湪绾?, '鎭曚笉璁环', '搴撴埧鏈夎揣', '璐у湪璺笂']
         }
     };
 </script>
