--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/image/image.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/image/image.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>ueditor图片对话框</title>
+    <title>ueditor鍥剧墖瀵硅瘽妗?/title>
     <script type="text/javascript" src="../internal.js"></script>
 
     <!-- jquery -->
@@ -36,7 +36,7 @@
         </div>
         <div id="tabbody" class="tabbody">
 
-            <!-- 远程图片 -->
+            <!-- 杩滅▼鍥剧墖 -->
             <div id="remote" class="panel">
                 <div class="top">
                     <div class="row">
@@ -67,7 +67,7 @@
                 <div class="right"><div id="preview"></div></div>
             </div>
 
-            <!-- 上传图片 -->
+            <!-- 涓婁紶鍥剧墖 -->
             <div id="upload" class="panel focus">
                 <div id="queueList" class="queueList">
                     <div class="statusBar element-invisible">
@@ -91,12 +91,12 @@
                 </div>
             </div>
 
-            <!-- 在线图片 -->
+            <!-- 鍦ㄧ嚎鍥剧墖 -->
             <div id="online" class="panel">
                 <div id="imageList"><var id="lang_imgLoading"></var></div>
             </div>
 
-            <!-- 搜索图片 -->
+            <!-- 鎼滅储鍥剧墖 -->
             <div id="search" class="panel">
                 <div class="searchBar">
                     <input id="searchTxt" class="searchTxt text" type="text" />
