--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/music/music.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/music/music.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>插入音乐</title>
+    <title>鎻掑叆闊充箰</title>
     <script type="text/javascript" src="../internal.js"></script>
     <link rel="stylesheet" type="text/css" href="music.css">
 </head>
