--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/attachment/attachment.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/attachment/attachment.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>ueditor图片对话框</title>
+    <title>ueditor鍥剧墖瀵硅瘽妗?/title>
     <script type="text/javascript" src="../internal.js"></script>
 
     <!-- jquery -->
@@ -23,7 +23,7 @@
             <span class="tab" data-content-id="online"><var id="lang_tab_online"></var></span>
         </div>
         <div id="tabbody" class="tabbody">
-            <!-- 上传图片 -->
+            <!-- 涓婁紶鍥剧墖 -->
             <div id="upload" class="panel focus">
                 <div id="queueList" class="queueList">
                     <div class="statusBar element-invisible">
@@ -47,7 +47,7 @@
                 </div>
             </div>
 
-            <!-- 在线图片 -->
+            <!-- 鍦ㄧ嚎鍥剧墖 -->
             <div id="online" class="panel">
                 <div id="fileList"><var id="lang_imgLoading"></var></div>
             </div>
