--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/map/show.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/map/show.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8"/>
-    <meta name="keywords" content="百度地图,百度地图API，百度地图自定义工具，百度地图所见即所得工具"/>
-    <meta name="description" content="百度地图API自定义地图，帮助用户在可视化操作下生成百度地图"/>
-    <title>百度地图API自定义地图</title>
-    <!--引用百度地图API-->
+    <meta name="keywords" content="鐧惧害鍦板浘,鐧惧害鍦板浘API锛岀櫨搴﹀湴鍥捐嚜瀹氫箟宸ュ叿锛岀櫨搴﹀湴鍥炬墍瑙佸嵆鎵€寰楀伐鍏?/>
+    <meta name="description" content="鐧惧害鍦板浘API鑷畾涔夊湴鍥撅紝甯姪鐢ㄦ埛鍦ㄥ彲瑙嗗寲鎿嶄綔涓嬬敓鎴愮櫨搴﹀湴鍥?/>
+    <title>鐧惧害鍦板浘API鑷畾涔夊湴鍥?/title>
+    <!--寮曠敤鐧惧害鍦板浘API-->
     <style type="text/css">
         html, body {
             margin: 0;
@@ -18,7 +18,7 @@
 </head>
 
 <body onload="initMap();">
-<!--百度地图容器-->
+<!--鐧惧害鍦板浘瀹瑰櫒-->
 <div style="width:697px;height:550px;border:#ccc solid 1px;" id="dituContent"></div>
 </body>
 <script type="text/javascript">
@@ -33,58 +33,45 @@
     var markersParam = getParam('markers');
     var markerStylesParam = getParam('markerStyles');
 
-    //创建和初始化地图函数：
-    function initMap() {
-        // [FF]切换模式后报错
-        if (!window.BMap) {
+    //鍒涘缓鍜屽垵濮嬪寲鍦板浘鍑芥暟锛?    function initMap() {
+        // [FF]鍒囨崲妯″紡鍚庢姤閿?        if (!window.BMap) {
             return;
         }
         var dituContent = document.getElementById('dituContent');
         dituContent.style.width = widthParam + 'px';
         dituContent.style.height = heightParam + 'px';
 
-        createMap();//创建地图
-        setMapEvent();//设置地图事件
-        addMapControl();//向地图添加控件
-
-        // 创建标注
+        createMap();//鍒涘缓鍦板浘
+        setMapEvent();//璁剧疆鍦板浘浜嬩欢
+        addMapControl();//鍚戝湴鍥炬坊鍔犳帶浠?
+        // 鍒涘缓鏍囨敞
         var markersArr = markersParam.split(',');
         var point = new BMap.Point(markersArr[0], markersArr[1]);
         marker = new BMap.Marker(point);
         marker.enableDragging();
-        map.addOverlay(marker); // 将标注添加到地图中
-
-        if(parent.editor && parent.document.body.contentEditable=="true") { //在编辑状态下
-            setMapListener();//地图改变修改外层的iframe标签src属性
-        }
+        map.addOverlay(marker); // 灏嗘爣娉ㄦ坊鍔犲埌鍦板浘涓?
+        if(parent.editor && parent.document.body.contentEditable=="true") { //鍦ㄧ紪杈戠姸鎬佷笅
+            setMapListener();//鍦板浘鏀瑰彉淇敼澶栧眰鐨刬frame鏍囩src灞炴€?        }
     }
 
-    //创建地图函数：
-    function createMap() {
-        map = new BMap.Map("dituContent");//在百度地图容器中创建一个地图
-        var centerArr = centerParam.split(',');
-        var point = new BMap.Point(parseFloat(centerArr[0]), parseFloat(centerArr[1]));//定义一个中心点坐标
-        map.centerAndZoom(point, parseInt(zoomParam));//设定地图的中心点和坐标并将地图显示在地图容器中
-    }
+    //鍒涘缓鍦板浘鍑芥暟锛?    function createMap() {
+        map = new BMap.Map("dituContent");//鍦ㄧ櫨搴﹀湴鍥惧鍣ㄤ腑鍒涘缓涓€涓湴鍥?        var centerArr = centerParam.split(',');
+        var point = new BMap.Point(parseFloat(centerArr[0]), parseFloat(centerArr[1]));//瀹氫箟涓€涓腑蹇冪偣鍧愭爣
+        map.centerAndZoom(point, parseInt(zoomParam));//璁惧畾鍦板浘鐨勪腑蹇冪偣鍜屽潗鏍囧苟灏嗗湴鍥炬樉绀哄湪鍦板浘瀹瑰櫒涓?    }
 
-    //地图事件设置函数：
-    function setMapEvent() {
-        map.enableDragging();//启用地图拖拽事件，默认启用(可不写)
-        map.enableScrollWheelZoom();//启用地图滚轮放大缩小
-        map.enableDoubleClickZoom();//启用鼠标双击放大，默认启用(可不写)
-        map.enableKeyboard();//启用键盘上下左右键移动地图
-    }
+    //鍦板浘浜嬩欢璁剧疆鍑芥暟锛?    function setMapEvent() {
+        map.enableDragging();//鍚敤鍦板浘鎷栨嫿浜嬩欢锛岄粯璁ゅ惎鐢?鍙笉鍐?
+        map.enableScrollWheelZoom();//鍚敤鍦板浘婊氳疆鏀惧ぇ缂╁皬
+        map.enableDoubleClickZoom();//鍚敤榧犳爣鍙屽嚮鏀惧ぇ锛岄粯璁ゅ惎鐢?鍙笉鍐?
+        map.enableKeyboard();//鍚敤閿洏涓婁笅宸﹀彸閿Щ鍔ㄥ湴鍥?    }
 
-    //地图控件添加函数：
-    function addMapControl() {
-        //向地图中添加缩放控件
+    //鍦板浘鎺т欢娣诲姞鍑芥暟锛?    function addMapControl() {
+        //鍚戝湴鍥句腑娣诲姞缂╂斁鎺т欢
         var ctrl_nav = new BMap.NavigationControl({anchor: BMAP_ANCHOR_TOP_LEFT, type: BMAP_NAVIGATION_CONTROL_LARGE});
         map.addControl(ctrl_nav);
-        //向地图中添加缩略图控件
-        var ctrl_ove = new BMap.OverviewMapControl({anchor: BMAP_ANCHOR_BOTTOM_RIGHT, isOpen: 1});
+        //鍚戝湴鍥句腑娣诲姞缂╃暐鍥炬帶浠?        var ctrl_ove = new BMap.OverviewMapControl({anchor: BMAP_ANCHOR_BOTTOM_RIGHT, isOpen: 1});
         map.addControl(ctrl_ove);
-        //向地图中添加比例尺控件
-        var ctrl_sca = new BMap.ScaleControl({anchor: BMAP_ANCHOR_BOTTOM_LEFT});
+        //鍚戝湴鍥句腑娣诲姞姣斾緥灏烘帶浠?        var ctrl_sca = new BMap.ScaleControl({anchor: BMAP_ANCHOR_BOTTOM_LEFT});
         map.addControl(ctrl_sca);
     }
 
