--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/scrawl/scrawl.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/scrawl/scrawl.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title></title>
@@ -73,11 +73,11 @@
 <script type="text/javascript" src="scrawl.js"></script>
 <script type="text/javascript">
     var settings = {
-        drawBrushSize:3, //画笔初始大小
-        drawBrushColor:"#4bacc6", //画笔初始颜色
+        drawBrushSize:3, //鐢荤瑪鍒濆澶у皬
+        drawBrushColor:"#4bacc6", //鐢荤瑪鍒濆棰滆壊
         colorList:['c00000', 'ff0000', 'ffc000', 'ffff00', '92d050', '00b050', '00b0f0', '0070c0', '002060', '7030a0', 'ffffff',
-            '000000', 'eeece1', '1f497d', '4f81bd', 'c0504d', '9bbb59', '8064a2', '4bacc6', 'f79646'], //画笔选择颜色
-        saveNum:10  //撤销次数
+            '000000', 'eeece1', '1f497d', '4f81bd', 'c0504d', '9bbb59', '8064a2', '4bacc6', 'f79646'], //鐢荤瑪閫夋嫨棰滆壊
+        saveNum:10  //鎾ら攢娆℃暟
     };
 
     var scrawlObj = new scrawl( settings );
