--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/table/edittip.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/table/edittip.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>表格删除提示</title>
+    <title>琛ㄦ牸鍒犻櫎鎻愮ず</title>
     <script type="text/javascript" src="../internal.js"></script>
     <style type="text/css">
         .section {
