--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/index.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>完整demo</title>
+    <title>瀹屾暣demo</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <script type="text/javascript" charset="utf-8" src="ueditor.config.js"></script>
     <script type="text/javascript" charset="utf-8" src="ueditor.all.min.js"> </script>
-    <!--建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败-->
-    <!--这里加载的语言文件会覆盖你在配置项目里添加的语言类型，比如你在配置项目里配置的是英文，这里加载的中文，那最后就是中文-->
+    <!--寤鸿鎵嬪姩鍔犲湪璇█锛岄伩鍏嶅湪ie涓嬫湁鏃跺洜涓哄姞杞借瑷€澶辫触瀵艰嚧缂栬緫鍣ㄥ姞杞藉け璐?->
+    <!--杩欓噷鍔犺浇鐨勮瑷€鏂囦欢浼氳鐩栦綘鍦ㄩ厤缃」鐩噷娣诲姞鐨勮瑷€绫诲瀷锛屾瘮濡備綘鍦ㄩ厤缃」鐩噷閰嶇疆鐨勬槸鑻辨枃锛岃繖閲屽姞杞界殑涓枃锛岄偅鏈€鍚庡氨鏄腑鏂?->
     <script type="text/javascript" charset="utf-8" src="lang/zh-cn/zh-cn.js"></script>
 
     <style type="text/css">
@@ -18,51 +18,50 @@
 </head>
 <body>
 <div>
-    <h1>完整demo</h1>
+    <h1>瀹屾暣demo</h1>
     <script id="editor" type="text/plain" style="width:1024px;height:500px;"></script>
 </div>
 <div id="btns">
     <div>
-        <button onclick="getAllHtml()">获得整个html的内容</button>
-        <button onclick="getContent()">获得内容</button>
-        <button onclick="setContent()">写入内容</button>
-        <button onclick="setContent(true)">追加内容</button>
-        <button onclick="getContentTxt()">获得纯文本</button>
-        <button onclick="getPlainTxt()">获得带格式的纯文本</button>
-        <button onclick="hasContent()">判断是否有内容</button>
-        <button onclick="setFocus()">使编辑器获得焦点</button>
-        <button onmousedown="isFocus(event)">编辑器是否获得焦点</button>
-        <button onmousedown="setblur(event)" >编辑器失去焦点</button>
+        <button onclick="getAllHtml()">鑾峰緱鏁翠釜html鐨勫唴瀹?/button>
+        <button onclick="getContent()">鑾峰緱鍐呭</button>
+        <button onclick="setContent()">鍐欏叆鍐呭</button>
+        <button onclick="setContent(true)">杩藉姞鍐呭</button>
+        <button onclick="getContentTxt()">鑾峰緱绾枃鏈?/button>
+        <button onclick="getPlainTxt()">鑾峰緱甯︽牸寮忕殑绾枃鏈?/button>
+        <button onclick="hasContent()">鍒ゆ柇鏄惁鏈夊唴瀹?/button>
+        <button onclick="setFocus()">浣跨紪杈戝櫒鑾峰緱鐒︾偣</button>
+        <button onmousedown="isFocus(event)">缂栬緫鍣ㄦ槸鍚﹁幏寰楃劍鐐?/button>
+        <button onmousedown="setblur(event)" >缂栬緫鍣ㄥけ鍘荤劍鐐?/button>
 
     </div>
     <div>
-        <button onclick="getText()">获得当前选中的文本</button>
-        <button onclick="insertHtml()">插入给定的内容</button>
-        <button id="enable" onclick="setEnabled()">可以编辑</button>
-        <button onclick="setDisabled()">不可编辑</button>
-        <button onclick=" UE.getEditor('editor').setHide()">隐藏编辑器</button>
-        <button onclick=" UE.getEditor('editor').setShow()">显示编辑器</button>
-        <button onclick=" UE.getEditor('editor').setHeight(300)">设置高度为300默认关闭了自动长高</button>
+        <button onclick="getText()">鑾峰緱褰撳墠閫変腑鐨勬枃鏈?/button>
+        <button onclick="insertHtml()">鎻掑叆缁欏畾鐨勫唴瀹?/button>
+        <button id="enable" onclick="setEnabled()">鍙互缂栬緫</button>
+        <button onclick="setDisabled()">涓嶅彲缂栬緫</button>
+        <button onclick=" UE.getEditor('editor').setHide()">闅愯棌缂栬緫鍣?/button>
+        <button onclick=" UE.getEditor('editor').setShow()">鏄剧ず缂栬緫鍣?/button>
+        <button onclick=" UE.getEditor('editor').setHeight(300)">璁剧疆楂樺害涓?00榛樿鍏抽棴浜嗚嚜鍔ㄩ暱楂?/button>
     </div>
 
     <div>
-        <button onclick="getLocalData()" >获取草稿箱内容</button>
-        <button onclick="clearLocalData()" >清空草稿箱</button>
+        <button onclick="getLocalData()" >鑾峰彇鑽夌绠卞唴瀹?/button>
+        <button onclick="clearLocalData()" >娓呯┖鑽夌绠?/button>
     </div>
 
 </div>
 <div>
     <button onclick="createEditor()">
-    创建编辑器</button>
+    鍒涘缓缂栬緫鍣?/button>
     <button onclick="deleteEditor()">
-    删除编辑器</button>
+    鍒犻櫎缂栬緫鍣?/button>
 </div>
 
 <script type="text/javascript">
 
-    //实例化编辑器
-    //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-    var ue = UE.getEditor('editor');
+    //瀹炰緥鍖栫紪杈戝櫒
+    //寤鸿浣跨敤宸ュ巶鏂规硶getEditor鍒涘缓鍜屽紩鐢ㄧ紪杈戝櫒瀹炰緥锛屽鏋滃湪鏌愪釜闂寘涓嬪紩鐢ㄨ缂栬緫鍣紝鐩存帴璋冪敤UE.getEditor('editor')灏辫兘鎷垮埌鐩稿叧鐨勫疄渚?    var ue = UE.getEditor('editor');
 
 
     function isFocus(e){
@@ -74,7 +73,7 @@
         UE.dom.domUtils.preventDefault(e)
     }
     function insertHtml() {
-        var value = prompt('插入html代码', '');
+        var value = prompt('鎻掑叆html浠ｇ爜', '');
         UE.getEditor('editor').execCommand('insertHtml', value)
     }
     function createEditor() {
@@ -86,22 +85,22 @@
     }
     function getContent() {
         var arr = [];
-        arr.push("使用editor.getContent()方法可以获得编辑器的内容");
-        arr.push("内容为：");
+        arr.push("浣跨敤editor.getContent()鏂规硶鍙互鑾峰緱缂栬緫鍣ㄧ殑鍐呭");
+        arr.push("鍐呭涓猴細");
         arr.push(UE.getEditor('editor').getContent());
         alert(arr.join("\n"));
     }
     function getPlainTxt() {
         var arr = [];
-        arr.push("使用editor.getPlainTxt()方法可以获得编辑器的带格式的纯文本内容");
-        arr.push("内容为：");
+        arr.push("浣跨敤editor.getPlainTxt()鏂规硶鍙互鑾峰緱缂栬緫鍣ㄧ殑甯︽牸寮忕殑绾枃鏈唴瀹?);
+        arr.push("鍐呭涓猴細");
         arr.push(UE.getEditor('editor').getPlainTxt());
         alert(arr.join('\n'))
     }
     function setContent(isAppendTo) {
         var arr = [];
-        arr.push("使用editor.setContent('欢迎使用ueditor')方法可以设置编辑器的内容");
-        UE.getEditor('editor').setContent('欢迎使用ueditor', isAppendTo);
+        arr.push("浣跨敤editor.setContent('娆㈣繋浣跨敤ueditor')鏂规硶鍙互璁剧疆缂栬緫鍣ㄧ殑鍐呭");
+        UE.getEditor('editor').setContent('娆㈣繋浣跨敤ueditor', isAppendTo);
         alert(arr.join("\n"));
     }
     function setDisabled() {
@@ -115,7 +114,7 @@
     }
 
     function getText() {
-        //当你点击按钮时编辑区域已经失去了焦点，如果直接用getText将不会得到内容，所以要在选回来，然后取得内容
+        //褰撲綘鐐瑰嚮鎸夐挳鏃剁紪杈戝尯鍩熷凡缁忓け鍘讳簡鐒︾偣锛屽鏋滅洿鎺ョ敤getText灏嗕笉浼氬緱鍒板唴瀹癸紝鎵€浠ヨ鍦ㄩ€夊洖鏉ワ紝鐒跺悗鍙栧緱鍐呭
         var range = UE.getEditor('editor').selection.getRange();
         range.select();
         var txt = UE.getEditor('editor').selection.getText();
@@ -124,15 +123,15 @@
 
     function getContentTxt() {
         var arr = [];
-        arr.push("使用editor.getContentTxt()方法可以获得编辑器的纯文本内容");
-        arr.push("编辑器的纯文本内容为：");
+        arr.push("浣跨敤editor.getContentTxt()鏂规硶鍙互鑾峰緱缂栬緫鍣ㄧ殑绾枃鏈唴瀹?);
+        arr.push("缂栬緫鍣ㄧ殑绾枃鏈唴瀹逛负锛?);
         arr.push(UE.getEditor('editor').getContentTxt());
         alert(arr.join("\n"));
     }
     function hasContent() {
         var arr = [];
-        arr.push("使用editor.hasContents()方法判断编辑器里是否有内容");
-        arr.push("判断结果为：");
+        arr.push("浣跨敤editor.hasContents()鏂规硶鍒ゆ柇缂栬緫鍣ㄩ噷鏄惁鏈夊唴瀹?);
+        arr.push("鍒ゆ柇缁撴灉涓猴細");
         arr.push(UE.getEditor('editor').hasContents());
         alert(arr.join("\n"));
     }
@@ -168,7 +167,7 @@
 
     function clearLocalData () {
         UE.getEditor('editor').execCommand( "clearlocaldata" );
-        alert("已清空草稿箱")
+        alert("宸叉竻绌鸿崏绋跨")
     }
 </script>
 </body>
